@@ -431,3 +431,13 @@ func splitToken(input string, token map[string]string) (splitted []string, err e
 
 	return splitted, nil
 }
+
+// fill empty/unused ARGx macros with empty string
+func fillEmptyArgMacros(macros map[string]string) {
+	for x := range 32 {
+		key := fmt.Sprintf("ARG%d", x)
+		if _, ok := macros[key]; !ok {
+			macros[key] = ""
+		}
+	}
+}
