@@ -1,10 +1,11 @@
 This file documents the revision history for the SNClient+ agent.
 
 next:
-         - fix check_os_version windows build version
+         - fix check_os_version windows build version (#134)
          - update node exporter to 1.8.2
          - chdir windows service into to shared-path folder
          - fix escaping arguments in windows ps1 scripts
+         - fill unused $ARGx$ macros with empty space (#110)
 
 0.25     Fri Jun 14 14:34:25 CEST 2024
          - update node exporter to 1.8.1
